manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starlight-view-modes
  namespace: starlight-view-modes
  labels:
    app: starlight-view-modes
spec:
  replicas: 3
  selector:
    matchLabels:
      app: starlight-view-modes
  template:
    metadata:
      labels:
        app: starlight-view-modes
    spec:
      containers:
        - name: starlight-view-modes
          image: 'trueberryless/starlight-view-modes:main-55e76d42d39359f135af4a4fc4e7404222ed3fb1'
          imagePullPolicy: Always
