manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starlight-view-modes
  namespace: starlight-view-modes
  annotations:
    cert-manager.io/issuer: acme-issuer
spec:
  selector:
    app: starlight-view-modes
  ports:
    - name: http
      port: 80
