manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starlight-view-modes
  namespace: starlight-view-modes
spec:
  rules:
    - host: starlight-view-modes.trueberryless.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: starlight-view-modes
                port:
                  number: 80

  tls:
  - hosts:
    - starlight-view-modes.trueberryless.org
    secretName: starlight-view-modes
